--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,14 @@
 services:
+  ui:
+    container_name: "ui"
+    build: ./webapp
+
+    depends_on:
+      db:
+        condition: service_healthy
+    ports:
+      - 8989:8989
+
   web:
     container_name: "csvimporter"
     build: .
@@ -22,7 +32,7 @@ services:
       interval: 1s
       timeout: 5s
       retries: 10
-
+      
   adminer:
     image: adminer
     restart: always
