--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,6 +5,7 @@
   "main": "express.js",
   "license": "MIT",
   "dependencies": {
+    "async": "^3.2.6",
     "cors": "^2.8.5",
     "csv-stringify": "^6.6.0",
     "express": "^5.1.0",
